# rscview

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  config.mk  configure.ac  emutos.txt
.github/workflows/: build.yml
.travis/: build.sh  deploy.github.sh  deploy.sh  install_ssh_id.sh  setup_env.sh
aes/: Makefile.am  aes.c  aes.h  aesdefs.h  aesutils.c  aesutils.h  emutos.txt  gem_rsc.c  gem_rsc.h  gem_rsc.rsc  gem_rsc.rsh  gem_rsc.rso  gemaplib.c  gembase.c  gemcli.c  gemctrl.c  gemevlib.c  gemfmalt.c  gemfmlib.c  gemfslib.c  gemgraf.c  gemgrlib.c  gemgsxif.c  geminit.c  geminput.c  gemlib.h  gemmnlib.c  gemobed.c  gemobjop.c  gemoblib.c  gempd.c  gempd.h  gemsclib.c  gemshlib.c  gemwmlib.c  gsxdefs.h  struct.h
aeslib/: Makefile.am  a_appl_exit.c  gem_aesP.h  globals.c  rc_array_to_grect.c  rc_copy.c
builds/rscview/master/: latest  latest-snapshot.tar.xz  rscview-02a40e4-linux.tar.bz2  rscview-02a40e4-linux.tar.xz  rscview-0827ac0-linux.tar.bz2  rscview-0827ac0-linux.tar.xz  rscview-09ed54a-linux.tar.bz2  rscview-09ed54a-linux.tar.xz  rscview-1.03-linux.tar.bz2  rscview-1.03-linux.tar.xz  rscview-1.04-linux.tar.bz2  rscview-1.04-linux.tar.xz  rscview-1.04.tar.xz  rscview-105c2ba-linux.tar.bz2  rscview-105c2ba-linux.tar.xz  rscview-10ac137-linux.tar.bz2  (+103 more)
data/: .gitignore  Makefile.am  bug.c  fnt_km_6x8.c  fnt_km_8x16.c  fnt_km_8x8.c  fnt_tr_6x8.c  fnt_tr_8x16.c  fnt_tr_8x8.c  fntdump.c  fntkm08.txt  fntkm09.fnt  fntkm09.txt  fntkm10.fnt  fntkm10.txt  fntl910.fnt  fntpl09.fnt  fntpl10.fnt  fntru09.fnt  fnttr08.fnt  fnttr08.txt  fnttr09.fnt  fnttr09.txt  fnttr10.fnt  fnttr10.txt  system10.fnt
desk/: .gitignore  desk_rsc.h  desk_rsc.rsh  desktop.rsc  desktop.rsd  desktop.rso  icon.h  icon.rsc  icon.rsd  icon.rso  icons.h  icons.rsh  orcs_c2.tpl  orcs_h.tpl
emutos/: emutos.css  emutos.js  emutos.php  index.php  vars.php
gemlib/: Makefile.am  a_form_center.c  a_form_dial.c  a_objc_add.c  a_objc_draw.c  a_objc_draw_grect.c  a_objc_offset.c  a_objc_sysvar.c  a_wind_get.c  a_wind_set.c  a_wind_set_ptr.c  a_wind_set_str.c  a_wind_update.c  aes.c  gem_aesP.h  gem_vdiP.h  globals.c  n_v_bez.c  n_v_bez_con.c  n_v_bez_fill.c  n_v_bez_off.c  n_v_bez_on.c  n_v_bez_qual.c  n_v_clsbm.c  n_v_color2nearest.c  n_v_color2value.c  n_v_create_ctab.c  n_v_create_driver_info.c  n_v_create_itab.c  n_v_ctab_idx2value.c  n_v_ctab_idx2vdi.c  n_v_ctab_vdi2idx.c  n_v_delete_ctab.c  n_v_delete_driver_info.c  n_v_delete_itab.c  n_v_ftext.c  n_v_ftext16.c  n_v_ftext16n.c  n_v_ftext_offset.c  n_v_ftext_offset16.c  (+285 more)
include/: aesutils.h  debug.h  extob.h  font.h  gem.h  gemdos.h  grect.h  mobject.h  mt_gemx.h  nls.h  or_draw.h  portab.h  portaes.h  portvdi.h  ro_mem.h  rsc.h  rsc_lib.h  rsrcload.h  s_endian.h  stat_.h  visibility.h  w_draw.h  ws.h
include/linux/: libcmain.h
libpng/: Makefile.am  png.c  png.h  pngconf.h  pngerror.c  pngpriv.h
m4/: amversion.m4  as.m4  auxdir.m4  cond.m4  curl.m4  depend.m4  depout.m4  filesys-list.m4  filesys-space.m4  glib-gettext.m4  icc.m4  init.m4  inline.m4  install-sh.m4  lead-dot.m4  make.m4  missing.m4  mkdirp.m4  options.m4  pkg.m4  pkgconfig.m4  prog-cc-c-o.m4  runlog.m4  sanity.m4  silent.m4  socklen.m4  stime.m4  strip.m4  substnot.m4  tar.m4  va_list.m4  volatile.m4
po/: .gitignore  LINGUAS  Makefile.am
src/: Makefile.am  bghio.c  cgic.c  cgic.h  charset.c  cp_1250.h  cp_1251.h  cp_1252.h  cp_737.h  cp_atari.h  cp_iso1.h  cp_latin1.h  cp_latin2.h  cp_latin9.h  cp_st_gr.h  cp_st_km.h  cp_st_l2.h  cp_st_l5.h  cp_st_l9.h  cp_st_ru.h  fileio.c  fileio.h  fio_err.c  fo_al.h  fo_al.rsc  fo_al.rsh  fo_al.rso  fo_alert.c  glib.c  html.c  html.h  htmljs.h  langtab.h  object.c  or_draw.c  or_drawo.c  or_sgem.c  pofile.c  pofile.h  rsc.c  (+10 more)
support/: config.guess  missing
util/: Makefile.am  debug.c  nls.c
util/sys/tos/: fclose.c  gemdos.c
util/sys/unix/: gemdos.c
vdi/: Makefile.am  maptab.c  maptab.h  pattern.h  vdi.c  vdi.h  writebmp.c  writebmp.h  writepng.c  writepng.h
vdilib/: Makefile.am  gem_vdiP.h  n_v_bez.c  n_v_bez_con.c  n_v_bez_off.c  n_v_bez_on.c  n_v_bez_qual.c  n_v_clsbm.c  n_v_color2nearest.c  n_v_color2value.c  n_v_create_ctab.c  n_v_create_itab.c  n_v_ctab_idx2value.c  n_v_ctab_idx2vdi.c  n_v_ctab_vdi2idx.c  n_v_delete_ctab.c  n_v_delete_itab.c  n_v_ftext.c  n_v_ftext16.c  n_v_ftext16n.c  n_v_ftext_offset.c  n_v_ftext_offset16.c  n_v_ftextn.c  n_v_get_ctab_id.c  n_v_get_outline.c  n_v_getbitmap_info.c  n_v_getoutline.c  n_v_killoutline.c  n_v_open_bm.c  n_v_opnbm.c  n_v_resize_bm.c  n_v_setrgb.c  n_v_value2color.c  nf_debugprintf.c  v_arc.c  v_bar.c  v_bit_image.c  v_clear_disp_list.c  v_clrwk.c  v_contourfill.c  (+99 more)
www/: Makefile  _rscview.css  _rscview.js  all_aes.php  all_desk.php  country.h  cssdropdown.html  cssdropdown1.html  desktop.html  emutos.css  emutos.html  emutos.php  fonthdr.h  index.html  index.php  kbd.css  lang.php  mkhtml.c  sprites.html  st-keyboard.html  st-keyboard.php  update.php  vars.php  viewlog.php
www/cs/: aes.php  index.php
www/cursors/: index.php
www/de/: aes.php  index.php
www/en/: aes.php  index.php
www/es/: aes.php  index.php
www/fi/: aes.php  index.php
www/fonts/: font8x16_atarist_large.html  font8x16_atarist_small.html  font8x16_greek_large.html  font8x16_greek_small.html  font8x16_kamenicky_large.html  font8x16_kamenicky_small.html  font8x16_latin2_large.html  font8x16_latin2_small.html  font8x16_latin5_large.html  font8x16_latin5_small.html  font8x16_latin9_large.html  font8x16_latin9_small.html  font8x16_russian_large.html  font8x16_russian_small.html
www/fr/: aes.php  index.php
www/gr/: aes.php  index.php
www/icons/: index.php
www/images/: alert.icn  dialog.icn  free.icn  image.icn  menue.icn  mouse.icn  string.icn  unknown.icn
www/it/: aes.php  index.php
www/ru/: aes.php  index.php
www/tests/: index.php
zlib/: Makefile.am  compress.c  dbgmem.c  deflate.c  gzlib.c  gzwrite.c  infback.c  inffast.c  inflate.c  uncompr.c  zconf.h  zutil.c  zutil.h
zlib/contrib/minizip/: ioapi.c  iowin32.c  miniunz.c  minizip.c  mztools.c  unzip.c  zip.c
