include $(top_srcdir)/config.mk

INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libgem.a

libgem_a_SOURCES = \
	aes.c \
	\
	gemaplib.c \
	gembase.c \
	gemctrl.c \
	gemevlib.c \
	gemglobe.c \
	gemgraf.c \
	gemgrlib.c \
	gemgsxif.c \
	geminit.c \
	geminput.c \
	gemmnlib.c \
	gemobed.c \
	gemobjop.c \
	gemoblib.c \
	gemsclib.c \
	gemshlib.c \
	aesutils.c \
	\
	gem_rsc.c gem_rsc.rsc gem_rsc.rso gem_rsc.rsh gem_rsc.h \
	\
	$(empty)
