include $(top_srcdir)/config.mk

INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libaes.a

libaes_a_SOURCES = \
	aes.c \
	\
	gemaplib.c \
	gembase.c \
	gemctrl.c \
	gemevlib.c \
	gemfmalt.c \
	gemfmlib.c \
	gemglobe.c \
	gemgraf.c \
	gemgrlib.c \
	gemgsxif.c \
	geminit.c \
	geminput.c \
	gemmnlib.c \
	gemobed.c \
	gempd.c \
	gemobjop.c \
	gemoblib.c \
	gemrslib.c \
	gemsclib.c \
	gemshlib.c \
	gemwmlib.c \
	gemwrect.c \
	aesutils.c \
	\
	gem_rsc.c gem_rsc.rsc gem_rsc.rso gem_rsc.rsh gem_rsc.h \
	\
	$(empty)
