include $(top_srcdir)/config.mk

INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libaes.a

libaes_a_SOURCES = \
	a_appl_exit.c \
	a_appl_init.c \
	a_vq_aes.c \
	\
	a_wind_set.c \
	a_wind_set_int.c \
	a_wind_set_str.c \
	\
	rc_copy.c \
	rc_equal.c \
	rc_intersect.c \
	rc_array_to_grect.c \
	rc_grect_to_array.c \
	globals.c \
	\
	$(empty)
	
