include $(top_srcdir)/config.mk

INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libgem.a

libgem_a_SOURCES = \
	gem_vdiP.h \
	gem_aesP.h \
	mt_gem.h \
	mt_gemx.h \
	\
	a_appl_exit.c \
	a_appl_init.c \
	a_vq_aes.c \
	\
	a_form_center.c \
	a_form_dial.c \
	\
	a_graf_handle.c \
	\
	a_menu_register.c \
	a_menu_bar.c \
	\
	a_objc_draw.c \
	a_objc_draw_grect.c \
	a_objc_offset.c \
	\
	a_wind_get.c \
	a_wind_set.c \
	a_wind_set_int.c \
	a_wind_set_str.c \
	a_wind_update.c \
	\
	rc_copy.c \
	rc_equal.c \
	rc_intersect.c \
	rc_union.c \
	rc_array_to_grect.c \
	rc_grect_to_array.c \
	globals.c \
	\
	vs_calibrate.c \
	vs_color.c \
	vsf_color.c \
	vsf_interior.c \
	vsf_perimeter.c \
	vsf_xperimeter.c \
	vsf_style.c \
	vsf_udpat.c \
	vsl_color.c \
	vsl_ends.c \
	vsl_type.c \
	vsl_udsty.c \
	vsl_width.c \
	vsm_color.c \
	vsm_height.c \
	vsm_type.c \
	vst_alignment.c \
	vst_color.c \
	vst_effects.c \
	vst_error.c \
	vst_font.c \
	vst_height.c \
	vst_point.c \
	vst_rotation.c \
	vst_scratch.c \
	vswr_mode.c \
	\
	v_opnwk.c \
	v_opnvwk.c \
	v_clsvwk.c \
	v_clswk.c \
	v_clrwk.c \
	v_updwk.c \
	v_flushcache.c \
	v_loadcache.c \
	v_savecache.c \
	v_set_app_buff.c \
	vs_clip.c \
	vs_clip_pxy.c \
	vs_clip_off.c \
	vst_load_fonts.c \
	vst_unload_fonts.c \
	\
	v_alpha_text.c \
	v_bit_image.c \
	v_xbit_image.c \
	v_clear_disp_list.c \
	v_copies.c \
	v_curdown.c \
	v_curhome.c \
	v_curleft.c \
	v_curright.c \
	v_curtext.c \
	v_curup.c \
	v_dspcur.c \
	v_eeol.c \
	v_eeos.c \
	v_enter_cur.c \
	v_escape2000.c \
	v_exit_cur.c \
	v_fontinit.c \
	v_form_adv.c \
	v_hardcopy.c \
	v_meta_extents.c \
	v_offset.c \
	v_orient.c \
	v_output_window.c \
	v_page_size.c \
	v_rmcur.c \
	v_rvoff.c \
	v_rvon.c \
	v_sound.c \
	v_trays.c \
	v_ps_halftone.c \
	v_write_meta.c \
	vm_coords.c \
	vm_filename.c \
	vm_pagesize.c \
	vq_calibrate.c \
	vq_chcells.c \
	vq_curaddress.c \
	vq_page_name.c \
	vq_scan.c \
	vq_tabstatus.c \
	vq_tdimensions.c \
	vq_tray_names.c \
	vqp_error.c \
	vqp_filmname.c \
	vs_curaddress.c \
	vs_palette.c \
	vs_mute.c \
	vsc_expose.c \
	vsp_film.c \
	vqp_films.c \
	vqp_state.c \
	vsp_state.c \
	vsp_save.c \
	vsp_message.c \
	vt_alignment.c \
	vt_axis.c \
	vt_origin.c \
	vt_resolution.c \
	\
	v_hide_c.c \
	v_show_c.c \
	vex_butv.c \
	vex_curv.c \
	vex_motv.c \
	vex_wheelv.c \
	vex_timv.c \
	vq_key_s.c \
	vq_mouse.c \
	vrq_choice.c \
	vrq_locator.c \
	vrq_string.c \
	vrq_string16.c \
	vrq_valuator.c \
	vsc_form.c \
	vsin_mode.c \
	vsm_choice.c \
	vsm_locator.c \
	vsm_string.c \
	vsm_string16.c \
	vsm_valuator.c \
	\
	vq_calibrate.c \
	vq_cellarray.c \
	vq_color.c \
	vq_extnd.c \
	vqf_attributes.c \
	vqin_mode.c \
	vql_attributes.c \
	vqm_attributes.c \
	vqt_attributes.c \
	vqt_cachesize.c \
	vqt_extent.c \
	vqt_extentn.c \
	vqt_extent16.c \
	vqt_extent16n.c \
	vqt_fontinfo.c \
	vqt_get_table.c \
	vqt_name.c \
	vqt_width.c \
	\
	v_arc.c \
	v_bar.c \
	v_cellarray.c \
	v_circle.c \
	v_contourfill.c \
	v_ellarc.c \
	v_ellipse.c \
	v_ellpie.c \
	v_fillarea.c \
	v_gtext.c \
	v_gtextn.c \
	v_gtext16.c \
	v_gtext16n.c \
	v_justified.c \
	v_pieslice.c \
	v_pline.c \
	v_pmarker.c \
	v_rbox.c \
	v_rfbox.c \
	vr_recfl.c \
	\
	v_get_pixel.c \
	vr_trnfm.c \
	vro_cpyfm.c \
	vrt_cpyfm.c \
	\
	v_write_png.c \
	\
	n_v_bez.c \
	n_v_bez_fill.c \
	n_v_bez_off.c \
	n_v_bez_on.c \
	n_v_bez_con.c \
	n_v_bez_qual.c \
	n_v_clsbm.c \
	n_v_color2nearest.c \
	n_v_color2value.c \
	n_v_create_ctab.c \
	n_v_create_itab.c \
	n_v_ctab_idx2value.c \
	n_v_ctab_idx2vdi.c \
	n_v_ctab_vdi2idx.c \
	n_v_delete_ctab.c \
	n_v_delete_itab.c \
	n_v_ftext.c \
	n_v_ftextn.c \
	n_v_ftext16.c \
	n_v_ftext16n.c \
	n_v_ftext_offset.c \
	n_v_ftext_offset16.c \
	n_v_get_ctab_id.c \
	n_v_get_outline.c \
	n_v_getbitmap_info.c \
	n_v_getoutline.c \
	n_v_killoutline.c \
	n_v_open_bm.c \
	n_v_opnbm.c \
	n_v_resize_bm.c \
	n_v_setrgb.c \
	n_v_value2color.c \
	\
	vdi_array2str.c \
	vdi_str2array.c \
	vdi_wstrlen.c \
	\
	vdi_dummy.c \
	nf_debugprintf.c \
	\
	vq_gdos.c \
	\
	$(empty)
